...
            android:layout_height="wrap_content"
            android:onClick="back_to_topics"
            android:text="BACK TO TOPICS"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/discussion_topic_title"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:text="@string/topics"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="48sp"
            android:textStyle="bold"
            tools:text="Topic Discussion" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="new_discussion"
            android:text="New Discussion" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/discussion_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true" />

    </LinearLayout>

...
